Back In Time

Version 0.8.7
* disable snapshots button if the files list is empty

Version 0.8.6
* fix change backup path crush
* add SnapshotsDialog

Version 0.8.2
* add right-click menu in files list: open (using gnome-open), copy (you can paste in Nautilus), restore (for snapshots only)
* add Copy toolbar button for files list

Version 0.8.1
* add every 5/10 minutes automatic backup

Version 0.8
* don't show backup files (*~)
* add backup files to default exclude patterns (*~)
* makedeb.sh: make a single package with all languages included
* install.sh: install all languages
* add English manual (man)
* add English help (docbook)
* add help button in main toolbar
* the application can be started with a 'path' to a folder or file as command line parameter
* when the application start, if it is already runnig pass it's command line to the first instance (this allow a basic integration with file-managers - see README)
* bug fix: when the application was started a second time it raise the first application's window but not always focused

Version 0.7.4
* if there is already a GUI instance running raise it
* add Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)

Version 0.7.2
* better integration with gnome icons (use mime-types)
* remember last path
* capitalize month in timeline (bug in french translation)

Version 0.7
* fix cron segfault 
* fix a crush when launched the very first time (not configured)
* multi-lingual support
* add French translation

Version 0.6.4
* remove About & Settings dialogs from the pager
* allow only one instance of the application

Version 0.6.2
* remember window position & size

Version 0.6
* when it make a snapshot it display an icon in systray area
* the background color for group items in timeline and places reflect more
  the system color scheme
* during restore only restore button is grayed ( even if everything is blocked )

Version 0.5.1
* add size & date columns in files view