@@ -1,7 +1,8 @@
 Back In Time
 
 Version 0.8.7
-* disable snapshots button if the files list is empty
+* Main Window: disable snapshots button if the files list is empty
+* Snapshots Dialog: auto-select first snapshots
 
 Version 0.8.6
 * fix change backup path crush
